# PubSave

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  prompt_plan.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_pgvector_embedding.py  003_add_tag_index_and_updated_at_trigger.py  004_add_gin_index_on_authors.py
demo/: VOICEOVER_SCRIPT.md  index.html
docs/: tutorial.md
docs/adr/: 001-rag-design.md
src/: cli.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py
src/health/: router.py
src/llm/: embedder.py  llm_client.py  openai_embedder.py  openai_llm.py
src/middleware/: error_handler.py
src/papers/: ask_router.py  formatters.py  models.py  pubmed_client.py  repository.py  router.py  schemas.py  service.py  tag_router.py
tests/: conftest.py  factories.py
tests/integration/: test_paper_endpoints.py  test_paper_repository.py  test_semantic_repository.py  test_smoke.py  test_tag_repository.py
tests/unit/: test_cli.py  test_cli_commands.py  test_embedder.py  test_formatters.py  test_llm_client.py  test_logging_config.py  test_pubmed_client.py  test_schemas.py  test_service.py
